feat: adicionar ajustes sonar